added second page

--- a/secondPage.html
+++ b/secondPage.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Succulents</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+  <title>Succulents</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-	<!-- BOOTSTRAP -->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <!-- BOOTSTRAP -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
-	<link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
 
-	<nav class="navbar navbar-expand">
-	  <a class="navbar-brand" href="#">
-	    <img src="https://www.stickpng.com/assets/images/5c6828263ce41c0ef9f4bd3f.png"  height="70" alt="">
-	  </a>	
-	  
-      <a class="nav-item nav-link active" href="index.html">Home</a>
+  <nav class="navbar navbar-expand">
+    <a class="navbar-brand" href="#">
+      <img src="https://www.stickpng.com/assets/images/5c6828263ce41c0ef9f4bd3f.png"  height="70" alt="">
+    </a>  
+    
+      <a class="nav-item nav-link" href="index.html">Home</a>
       <a class="nav-item nav-link" href="secondPage.html">About</a>
       <a class="nav-item nav-link" href="thirdPage.html">Contact Us</a>
-	</nav>
+  </nav>
 
-  <div class="jumbotron text-center hero-background-img">
-    <h1>Succulents</h1>
-    <a href="secondPage.html" class="btn btn-primary">Learn More</a>
+  <!-- Carousel -->
+  <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+          <img height="900" src="https://wallpapercave.com/wp/wp2136327.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img height="900"  src="https://wallpapercave.com/wp/wp2136337.jpg" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img height="900" src="https://wallpapercave.com/wp/wp2136354.jpg" class="d-block w-100" alt="...">
+      </div>
+    </div>
   </div>
+
 
   <div class="container mb-5 mt-5">
     <div class="row">
