--- a/thirdPage.html
+++ b/thirdPage.html
@@ -20,7 +20,7 @@
 	    <img src="https://www.stickpng.com/assets/images/5c6828263ce41c0ef9f4bd3f.png"  height="70" alt="">
 	  </a>	
 	  
-      <a class="nav-item nav-link active" href="index.html">Home</a>
+      <a class="nav-item nav-link active" href="#">Home</a>
       <a class="nav-item nav-link" href="secondPage.html">About</a>
       <a class="nav-item nav-link" href="thirdPage.html">Contact Us</a>
 	</nav>
