--- a/secondPage.html
+++ b/secondPage.html
@@ -44,26 +44,34 @@
   <div class="container mb-5 mt-5">
     <div class="row">
       <div class="col-lg-4">
-        <h3>Definition</h3>
+        <h3>Caring</h3>
         <div class="row m-5">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy0xDODpNLQlhumSrandNVYTvS5s5DqRJOcyRyfQhjfjV5pwH7&s" class="img-fluid rounded">
+        <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ft_iKg7AUsI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-        <p class="lead">A general definition of succulents is that they are drought resistant plants in which the leaves, stem or roots have become more than usually fleshy by the development of water-storing tissue. Other sources exclude roots as in the definition "a plant with thick, fleshy and swollen stems and/or leaves, adapted to dry environments." This difference affects the relationship between succulents and "geophytes" – plants that survive unfavorable seasons as a resting bud on an underground organ. </p>
-      </div>
-      <div class="col-lg-4">
-        <h3>Appearance</h3>
-        <div class="row m-5">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX47MW7o7mwxBTeilR3wpLGlP0kL92EgJFHpG5DqFzs6p7dvTq-w&s">
 
       </div>
-        <p class="lead">The storage of water often gives succulent plants a more swollen or fleshy appearance than other plants, a characteristic known as succulence</p>
+        <p class="lead">Ever wondered where the plants in your succulent garden ACTUALLY come from? Better yet, what about learning how to grow succulents from a master succulent plant grower who produces millions per year?</p>
       </div>
       <div class="col-lg-4">
-        <h3>Habitat</h3>
+        <h3>For</h3>
         <div class="row m-5">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp6dqEArQBoSQexM91JholeeT1MSJVq3Bs7b-0-AyucbfHx375&s">
+        <div class="embed-responsive embed-responsive-16by9">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/6jpc9LN_Gkk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-        <p class="lead">Other than Antarctica, succulents can be found within each continent. While it is often thought that most succulents come from dry areas such as steppes, semi-desert, and desert, the world's driest areas do not make for proper succulent habitats. Australia, the world's driest continent, hosts very few native succulents due to the frequent and prolonged droughts. Even Africa, the continent with the most native succulents, does not host many of the plants in its most dry regions.</p>
+
+      </div>
+        <p class="lead">Growing succulents indoors doesn't have to be tricky, if you follow my steps! In this week's video, I share 5 tips for keeping your indoor succulents healthy and looking their best.  </p>
+      </div>
+      <div class="col-lg-4">
+        <h3>Succulents</h3>
+        <div class="row m-5">
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/5bdQDKTpnvU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+
+      </div>
+        <p class="lead">Watch as Laura from Garden Answer shows you 7 great succulents for beginners!</p>
       </div>
     </div>
   </div>
