added third page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  
       <a class="nav-item nav-link active" href="index.html">Home</a>
       <a class="nav-item nav-link" href="secondPage.html">About</a>
-      <a class="nav-item nav-link" href="thirdPage.html">Contact Us</a>
+      <a class="nav-item nav-link" href="thirdPage.html">Gallery</a>
 	</nav>
 
   <div class="jumbotron text-center hero-background-img">
