--- a/secondPage.html
+++ b/secondPage.html
@@ -22,7 +22,7 @@
     
       <a class="nav-item nav-link" href="index.html">Home</a>
       <a class="nav-item nav-link" href="secondPage.html">About</a>
-      <a class="nav-item nav-link" href="thirdPage.html">Contact Us</a>
+      <a class="nav-item nav-link" href="thirdPage.html">Gallery</a>
   </nav>
 
   <!-- Carousel -->
