--- a/thirdPage.html
+++ b/thirdPage.html
@@ -22,37 +22,84 @@
 	  
       <a class="nav-item nav-link active" href="#">Home</a>
       <a class="nav-item nav-link" href="secondPage.html">About</a>
-      <a class="nav-item nav-link" href="thirdPage.html">Contact Us</a>
+      <a class="nav-item nav-link" href="thirdPage.html">Gallery</a>
 	</nav>
 
-  <div class="jumbotron text-center hero-background-img">
-    <h1>Succulents</h1>
-    <a href="secondPage.html" class="btn btn-primary">Learn More</a>
+
+  <div class="container mb-5 mt-5">
+    <div class="row">
+      <div class="col-lg-4">
+        <h3>Pictures</h3>
+        <div class="row m-5">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy0xDODpNLQlhumSrandNVYTvS5s5DqRJOcyRyfQhjfjV5pwH7&s" class="img-fluid rounded">
+      </div>
+
+      </div>
+      <div class="col-lg-4">
+        <h3>of</h3>
+        <div class="row m-5">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX47MW7o7mwxBTeilR3wpLGlP0kL92EgJFHpG5DqFzs6p7dvTq-w&s">
+
+      </div>
+
+      </div>
+      <div class="col-lg-4">
+        <h3>Succulents</h3>
+        <div class="row m-5">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp6dqEArQBoSQexM91JholeeT1MSJVq3Bs7b-0-AyucbfHx375&s">
+      </div>
+      </div>
+    </div>
   </div>
 
   <div class="container mb-5 mt-5">
     <div class="row">
       <div class="col-lg-4">
-        <h3>Definition</h3>
+
         <div class="row m-5">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy0xDODpNLQlhumSrandNVYTvS5s5DqRJOcyRyfQhjfjV5pwH7&s" class="img-fluid rounded">
       </div>
-        <p class="lead">A general definition of succulents is that they are drought resistant plants in which the leaves, stem or roots have become more than usually fleshy by the development of water-storing tissue. Other sources exclude roots as in the definition "a plant with thick, fleshy and swollen stems and/or leaves, adapted to dry environments." This difference affects the relationship between succulents and "geophytes" – plants that survive unfavorable seasons as a resting bud on an underground organ. </p>
+
       </div>
       <div class="col-lg-4">
-        <h3>Appearance</h3>
+
         <div class="row m-5">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX47MW7o7mwxBTeilR3wpLGlP0kL92EgJFHpG5DqFzs6p7dvTq-w&s">
 
       </div>
-        <p class="lead">The storage of water often gives succulent plants a more swollen or fleshy appearance than other plants, a characteristic known as succulence</p>
+
       </div>
       <div class="col-lg-4">
-        <h3>Habitat</h3>
+
         <div class="row m-5">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp6dqEArQBoSQexM91JholeeT1MSJVq3Bs7b-0-AyucbfHx375&s">
       </div>
-        <p class="lead">Other than Antarctica, succulents can be found within each continent. While it is often thought that most succulents come from dry areas such as steppes, semi-desert, and desert, the world's driest areas do not make for proper succulent habitats. Australia, the world's driest continent, hosts very few native succulents due to the frequent and prolonged droughts. Even Africa, the continent with the most native succulents, does not host many of the plants in its most dry regions.</p>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mb-5 mt-5">
+    <div class="row">
+      <div class="col-lg-4">
+
+        <div class="row m-5">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRy0xDODpNLQlhumSrandNVYTvS5s5DqRJOcyRyfQhjfjV5pwH7&s" class="img-fluid rounded">
+      </div>
+
+      </div>
+      <div class="col-lg-4">
+
+        <div class="row m-5">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRX47MW7o7mwxBTeilR3wpLGlP0kL92EgJFHpG5DqFzs6p7dvTq-w&s">
+
+      </div>
+
+      </div>
+      <div class="col-lg-4">
+
+        <div class="row m-5">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSp6dqEArQBoSQexM91JholeeT1MSJVq3Bs7b-0-AyucbfHx375&s">
+      </div>
       </div>
     </div>
   </div>
